--- a/code/public/index.html
+++ b/code/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Technigo React App</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <!-- This element is used in src/index.js to render the react root into -->
